Plumb through metadata for traces generated by profiling process.

The metadata contains the necessary and sufficient information to symbolize the
trace.

Bug: 755382
Change-Id: Ie13690618bd055512a6311d4b65eac3dc47e6eb3
Reviewed-on: https://chromium-review.googlesource.com/622281
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Brett Wilson <brettw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#496053}
Former-commit-id: 21a2cabf7f10d9f415ded0c68a12a98e818c16a0