chrome/browser/profiling_host/profiling_process_host.cc
@@ -7,11 +7,14 @@
 #include "base/allocator/features.h"
 #include "base/command_line.h"
 #include "base/strings/string_number_conversions.h"
+#include "base/sys_info.h"
 #include "base/task_scheduler/post_task.h"
 #include "build/build_config.h"
+#include "chrome/common/chrome_content_client.h"
 #include "chrome/common/chrome_switches.h"
 #include "chrome/common/profiling/constants.mojom.h"
 #include "chrome/common/profiling/profiling_constants.h"
+#include "components/version_info/version_info.h"
 #include "content/public/browser/browser_child_process_host.h"
 #include "content/public/browser/browser_thread.h"
 #include "content/public/browser/notification_service.h"
@@ -228,11 +231,30 @@ void ProfilingProcessHost::GetOutputFileOnBlockingThread(
 void ProfilingProcessHost::HandleDumpProcessOnIOThread(base::ProcessId pid,
                                                        base::File file) {
   mojo::ScopedHandle handle = mojo::WrapPlatformFile(file.TakePlatformFile());
-  memlog_->DumpProcess(pid, std::move(handle));
+  memlog_->DumpProcess(pid, std::move(handle), GetMetadataJSONForTrace());
 }
 
 void ProfilingProcessHost::SetMode(Mode mode) {
   mode_ = mode;
+}
+
+std::unique_ptr<base::DictionaryValue>
+ProfilingProcessHost::GetMetadataJSONForTrace() {
+  std::unique_ptr<base::DictionaryValue> metadata_dict(
+      new base::DictionaryValue);
+  metadata_dict->SetKey(
+      "product-version",
+      base::Value(version_info::GetProductNameAndVersionForUserAgent()));
+  metadata_dict->SetKey("user-agent", base::Value(GetUserAgent()));
+  metadata_dict->SetKey("os-name",
+                        base::Value(base::SysInfo::OperatingSystemName()));
+  metadata_dict->SetKey(
+      "command_line",
+      base::Value(
+          base::CommandLine::ForCurrentProcess()->GetCommandLineString()));
+  metadata_dict->SetKey(
+      "os-arch", base::Value(base::SysInfo::OperatingSystemArchitecture()));
+  return metadata_dict;
 }
 
 }  // namespace profiling
