chrome/profiling/json_exporter.cc
@@ -6,40 +6,17 @@
 
 #include <map>
 
-#include "base/command_line.h"
-#include "base/cpu.h"
 #include "base/format_macros.h"
+#include "base/json/json_writer.h"
 #include "base/json/string_escape.h"
 #include "base/strings/string_number_conversions.h"
 #include "base/strings/stringprintf.h"
-#include "base/sys_info.h"
 #include "base/trace_event/trace_event_argument.h"
 #include "services/resource_coordinator/public/cpp/memory_instrumentation/tracing_observer.h"
 
 namespace profiling {
 
 namespace {
-
-// This is the set of metadata fields that is too annoying to plumb into the
-// profiling process for now. The memory dump is useful without all this data
-// anyways. It's mostly here to make the tracing UI work well.
-const char kFakeOtherMetadata[] =
-    R"END(
-    "field-trials":[],
-    "gpu-devid":5052,
-    "gpu-driver":"367.57",
-    "gpu-gl-renderer":"Quadro K1200/PCIe/SSE2",
-    "gpu-gl-vendor":"NVIDIA Corporation",
-    "gpu-psver":"4.50",
-    "gpu-venid":4318,
-    "gpu-vsver":"4.50",
-    "network-type":"Ethernet",
-    "product-version":"Chrome/59.0.3071.115",
-    "revision":
-      "3cf8514bb1239453fd15ff1f7efee389ac9df8ba-refs/branch-heads/3071@{#820}",
-    "trace-config":"{}",
-    "user-agent":"Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/59.0.3071.115 Safari/537.36",
-    "v8-version":"5.9.211.38")END";
 
 // Maps strings to integers for the JSON string table.
 using StringTable = std::map<std::string, size_t>;
@@ -253,111 +230,14 @@ void WriteAllocatorNodes(const UniqueAllocCount& alloc_counts,
   out << "]";
 }
 
-// Copy-pastaed from content/browser/tracing/tracing_controller_impl.cc.
-std::string GetClockString() {
-  switch (base::TimeTicks::GetClock()) {
-    case base::TimeTicks::Clock::FUCHSIA_MX_CLOCK_MONOTONIC:
-      return "FUCHSIA_MX_CLOCK_MONOTONIC";
-    case base::TimeTicks::Clock::LINUX_CLOCK_MONOTONIC:
-      return "LINUX_CLOCK_MONOTONIC";
-    case base::TimeTicks::Clock::IOS_CF_ABSOLUTE_TIME_MINUS_KERN_BOOTTIME:
-      return "IOS_CF_ABSOLUTE_TIME_MINUS_KERN_BOOTTIME";
-    case base::TimeTicks::Clock::MAC_MACH_ABSOLUTE_TIME:
-      return "MAC_MACH_ABSOLUTE_TIME";
-    case base::TimeTicks::Clock::WIN_QPC:
-      return "WIN_QPC";
-    case base::TimeTicks::Clock::WIN_ROLLOVER_PROTECTED_TIME_GET_TIME:
-      return "WIN_ROLLOVER_PROTECTED_TIME_GET_TIME";
-  }
-
-  NOTREACHED();
-  return std::string();
-}
-
-void WriteMetadata(std::ostream& out) {
-  // This is copy-pastaed from
-  // TracingControllerImpl::GenerateTracingMetadataDict().
-  //
-  // The memory dump doesn't really need most of this info. This is here to make
-  // the trace viewer and some supporting scripts happy. The main things that
-  // are useful are command_line and os-name which help the scripts know how to
-  // symbolize the dump.
-  out << "\"metadata\": {\n";
-
-// Output the OS info.
-#if defined(OS_CHROMEOS)
-  out << "\"os-name\": \"CrOS\",\n";
-  int32_t major_version;
-  int32_t minor_version;
-  int32_t bugfix_version;
-  // OperatingSystemVersion only has a POSIX implementation which returns the
-  // wrong versions for CrOS.
-  base::SysInfo::OperatingSystemVersionNumbers(&major_version, &minor_version,
-                                               &bugfix_version);
-  out << "\"os-version\": \""
-      << base::StringPrintf("%d.%d.%d", major_version, minor_version,
-                            bugfix_version)
-      << "\",\n";
-#else
-  out << "\"os-name\": \"" << base::SysInfo::OperatingSystemName() << "\",\n";
-  out << "\"os-version\": \"" << base::SysInfo::OperatingSystemVersion()
-      << "\",\n";
-#endif
-  out << "\"os-arch\": \"" << base::SysInfo::OperatingSystemArchitecture()
-      << "\",\n";
-
-  // Output CPU info.
-  base::CPU cpu;
-  out << "\"cpu-family\": " << cpu.family() << ",\n"
-      << "\"cpu-model\": " << cpu.model() << ",\n"
-      << "\"cpu-stepping\": " << cpu.stepping() << ",\n"
-      << "\"num-cpus\": " << base::SysInfo::NumberOfProcessors() << ",\n"
-      << "\"physical-memory\": " << base::SysInfo::AmountOfPhysicalMemoryMB()
-      << ",\n";
-
-  std::string cpu_brand = cpu.cpu_brand();
-  // Workaround for crbug.com/249713.
-  // TODO(oysteine): Remove workaround when bug is fixed.
-  size_t null_pos = cpu_brand.find('\0');
-  if (null_pos != std::string::npos)
-    cpu_brand.erase(null_pos);
-  out << "\"cpu-brand\": \"" << cpu_brand << "\",\n";
-
-  // Output clock stuff.
-  out << "\"clock-domain\": \"" << GetClockString() << "\",\n"
-      << "\"highres-ticks\": "
-      << (base::TimeTicks::IsHighResolution() ? "true" : "false") << ",\n";
-
-  // Output timestamp.
-  base::Time::Exploded ctime;
-  base::Time::Now().UTCExplode(&ctime);
-  std::string time_string = base::StringPrintf(
-      "%u-%u-%u %d:%d:%d", ctime.year, ctime.month, ctime.day_of_month,
-      ctime.hour, ctime.minute, ctime.second);
-  out << "\"trace-capture-datetime\": \"" << time_string << "\",\n";
-
-  // TODO(ajwong): This is the commandline for the profiling process and not the
-  // target. This is completely the wrong thing, but for now it gets us going.
-  // https://crbug.com/755382
-  std::string command_line;
-  base::EscapeJSONString(
-      base::CommandLine::ForCurrentProcess()->GetCommandLineString(), false,
-      &command_line);
-
-  out << "\"command_line\": \"" << command_line << "\",\n";
-
-  out << kFakeOtherMetadata;
-
-  out << "}\n";
-}
-
 }  // namespace
 
 void ExportAllocationEventSetToJSON(
     int pid,
     const AllocationEventSet& event_set,
     const std::vector<memory_instrumentation::mojom::VmRegionPtr>& maps,
-    std::ostream& out) {
+    std::ostream& out,
+    std::unique_ptr<base::DictionaryValue> metadata_dict) {
   out << "{ \"traceEvents\": [";
   WriteProcessName(pid, out);
   out << ",\n";
@@ -426,8 +306,15 @@ void ExportAllocationEventSetToJSON(
 
   WriteHeapsV2Footer(out);
   WriteDumpsFooter(out);
-  out << "],";
-  WriteMetadata(out);
+  out << "]";
+
+  // Append metadata.
+  if (metadata_dict) {
+    std::string metadata;
+    base::JSONWriter::Write(*metadata_dict, &metadata);
+    out << ",\"metadata\": " << metadata;
+  }
+
   out << "}\n";
 }
 
